Update dev build deploy

--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   build_and_deploy:
+    environment: dev
     name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
