--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -5,25 +5,29 @@ on:
       - master
   workflow_dispatch:
 jobs:
-  build_and_deploy:
-    environment: dev
-    name: Build and Deploy
-    runs-on: ubuntu-latest
+  setref:
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: vector623
-          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: ./
-          tags: ghcr.io/ptcdevs/python-restapi:latest
-          push: true
+    - name: Get branch name
+      run: echo "::set-output name=branchName::${{ github.ref }}"
+#  build_and_deploy:
+#    environment: dev
+#    name: Build and Deploy
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v2
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+#      - name: Login to GitHub Container Registry
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ghcr.io
+#          username: vector623
+#          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
+#      - name: Build and push
+#        uses: docker/build-push-action@v3
+#        with:
+#          context: ./
+#          tags: ghcr.io/ptcdevs/python-restapi:latest
+#          push: true
