--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -11,11 +11,10 @@ jobs:
     steps:
       - id: set-refs
         name: Set refs
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/}) }}" >> $GITHUB_OUTPUT
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
       - name: Check refs
         run: |
-          echo "the triggering github branch is: ${{ steps.set-refs.outputs.BRANCH_NAME }}"
-
+          echo "branch: ${{ steps.set-refs.outputs.BRANCH_NAME }}" >> $GITHUB_STEP_SUMMARY
 #  build_and_deploy:
 #    environment: dev
 #    name: Build and Deploy
