--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy Docker Image
+name: dev-build-deploy
 on:
   push:
     branches:
@@ -6,7 +6,7 @@ on:
       - add-dev-build-deploy
   workflow_dispatch:
 jobs:
-  setref:
+  setrefs:
     runs-on: ubuntu-latest
     steps:
       - id: set-refs
@@ -15,12 +15,16 @@ jobs:
       - name: Check refs
         run: |
           echo "branch: ${{ steps.set-refs.outputs.BRANCH_NAME }}" >> $GITHUB_STEP_SUMMARY
-#  build_and_deploy:
-#    environment: dev
-#    name: Build and Deploy
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
+  build_and_deploy:
+    environment: dev
+    name: Build and Deploy
+    runs-on: ubuntu-latest
+    needs:
+      - setrefs
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check refs
+
 #      - name: Set up QEMU
 #        uses: docker/setup-qemu-action@v2
 #      - name: Set up Docker Buildx
