--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -1,4 +1,4 @@
-name: dev-build-deploy
+name: Dev build and deploy
 on:
   push:
     branches:
@@ -6,7 +6,8 @@ on:
       - add-dev-build-deploy
   workflow_dispatch:
 jobs:
-  setrefs:
+  set-refs:
+    name: Set references
     runs-on: ubuntu-latest
     steps:
       - id: set-refs
@@ -17,16 +18,16 @@ jobs:
           echo "branch: ${{ steps.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
     outputs:
       branch: ${{ steps.set-refs.outputs.branch }}
-  build_and_deploy:
+  build-and-deploy:
     environment: dev
-    name: Build and Deploy
+    name: Build and deploy
     runs-on: ubuntu-latest
     needs:
       - setrefs
     steps:
       - uses: actions/checkout@v3
       - name: Check refs
-        run: "branch: ${{ needs.setrefs.outputs.branch }}"
+        run: "branch: ${{ needs.set-refs.outputs.branch }}"
 #      - name: Set up QEMU
 #        uses: docker/setup-qemu-action@v2
 #      - name: Set up Docker Buildx
