--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -29,19 +29,19 @@ jobs:
       - name: Check refs
         run: |
           echo "branch: ${{ needs.set-refs.outputs.branch }}"
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: vector623
-#          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
-#      - name: Build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: ./
-#          tags: ghcr.io/ptcdevs/python-restapi:latest
-#          push: true
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: vector623
+          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: ./
+          tags: ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}
+          push: true
