--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -5,6 +5,7 @@ on:
       - master
       - add-dev-build-deploy
   workflow_dispatch:
+concurrency: ci-${{ github.ref }}
 jobs:
   set-refs:
     name: Set references
@@ -28,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check refs
         run: |
-          echo "branch: ${{ needs.set-refs.outputs.branch }}"
+          echo "branch: `${{ needs.set-refs.outputs.branch }}`"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -47,4 +48,4 @@ jobs:
           push: true
       - name: Output image tag
         run: |
-          echo "ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "docker tag: `ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}`" >> $GITHUB_STEP_SUMMARY
