--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -40,6 +40,13 @@ jobs:
           registry: ghcr.io
           username: vector623
           password: ${{ secrets.GHCR_GITHUB_TOKEN }}
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ${{ runner.OS }}/docker
+          key: ${{ runner.OS }}-docker-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            ${{ runner.OS }}-docker-
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
