--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Check refs
         run: |
-          echo "branch: `${{ needs.set-refs.outputs.branch }}`"
+          echo "branch: ${{ needs.set-refs.outputs.branch }}"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -55,4 +55,4 @@ jobs:
           push: true
       - name: Output image tag
         run: |
-          echo "docker tag: `ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}`" >> $GITHUB_STEP_SUMMARY
+          echo "docker tag: ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
