--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
       - master
-      - add-dev-build-deploy
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
 concurrency: ci-${{ github.ref }}
 jobs:
