--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -15,7 +15,12 @@ jobs:
     steps:
       - id: set-refs
         name: Set refs
-        run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+        run: |
+          if [[ ${GITHUB_REF} ~= "^refs/pull"]]; then
+            echo "branch=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_OUTPUT
+          else
+            echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+          fi
       - name: Check refs
         run: |
           echo "branch: ${{ steps.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
