--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -16,7 +16,7 @@ jobs:
       - id: set-refs
         name: Set refs
         run: |
-          if [[ `echo ${GITHUB_REF}` ~= ^refs/pull ]]; then
+          if [[ $(echo ${GITHUB_REF}) ~= ^refs/pull ]]; then
             echo "branch=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_OUTPUT
           else
             echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
