--- a/helm/Makefile
+++ b/helm/Makefile
@@ -1,7 +1,11 @@
 #!make
 
-GITREF=$(shell git rev-parse --abbrev-ref HEAD | tr '[:upper]' '[:lower]')
+GITREF=`git rev-parse --abbrev-ref HEAD |  sed -e 's/\(.*\)/\L\1/'`
 export
 
 env:
-	echo "GITREF: ${GITREF}"
+	@echo "GITREF: ${GITREF}"
+	@echo "K8S_NAMESPACE: ${K8S_NAMESPACE}"
+
+template:
+	helm template ./python-restapi
