Update service w/correct containerport

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -11,7 +11,7 @@ template:
 	helm template ./python-restapi
 
 uninstall:
-	helm -n ${K8S_NAMESPACE} uninstall python-restapi ./python-restapi
+	helm -n ${K8S_NAMESPACE} uninstall python-restapi
 
 install:
 	helm -n ${K8S_NAMESPACE} install python-restapi ./python-restapi
