--- a/helm/Makefile
+++ b/helm/Makefile
@@ -11,9 +11,10 @@ template:
 	helm template ./python-restapi
 
 uninstall:
-	helm -n ${K8S_NAMESPACE} uninstall python-restapi
+	helm -n ${K8S_NAMESPACE} uninstall python-restapi-${GITREF}
 
 install:
-	helm -n ${K8S_NAMESPACE} install python-restapi ./python-restapi
+	helm -n ${K8S_NAMESPACE} install python-restapi-${GITREF} ./python-restapi \
+		--set image.tag=${GITREF}
 
 reinstall: uninstall install
