--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -80,11 +80,19 @@ jobs:
       - name: Check refs
         run: |
           echo "branch: ${{ needs.set-refs.outputs.branch }}"
-          echo "branch: ${{ needs.docker-build.outputs.docker-tag }}"
+          echo "docker-tag: ${{ needs.docker-build.outputs.docker-tag }}"
       - uses: azure/k8s-set-context@v2
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBECONFIG }}
           context: lke77314-ctx
-      - name: debug
-        run: kubectl get namespaces
+      - name: Helm uninstall
+        run: helm -n dev uninstall python-restapi-${TAG}
+        env:
+          TAG: ${{ needs.set-refs.outputs.branch }}
+      - name: Helm install
+        run: |
+          helm -n ${K8S_NAMESPACE} install python-restapi-${TAG} ./python-restapi \
+            --set image.tag=${TAG}
+        env:
+          TAG: ${{ needs.set-refs.outputs.branch }}
