--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -94,5 +94,6 @@ jobs:
         run: |
           helm -n ${K8S_NAMESPACE} install python-restapi-${TAG} ./python-restapi \
             --set image.tag=${TAG}
+        working-directory: helm
         env:
           TAG: ${{ needs.set-refs.outputs.branch }}
