--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -94,7 +94,8 @@ jobs:
       - name: Helm install
         run: |
           helm -n dev install python-restapi-${TAG} ./python-restapi \
-            --set image.tag=${TAG}
+            --set image.tag=${TAG} \
+            --wait >> $GITHUB_STEP_SUMMARY
         working-directory: helm
         env:
           TAG: ${{ needs.set-refs.outputs.branch }}
