Add dev build deploy (#3)
* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Update dev build deploy

* Add helm chart

* Update helm makefile

* Update service w/correct containerport

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

* Update readme

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -1,7 +1,20 @@
 #!make
 
-GITREF=$(shell git rev-parse --abbrev-ref HEAD | tr '[:upper]' '[:lower]')
+GITREF=`git rev-parse --abbrev-ref HEAD |  sed -e 's/\(.*\)/\L\1/'`
 export
 
 env:
-	echo "GITREF: ${GITREF}"
+	@echo "GITREF: ${GITREF}"
+	@echo "K8S_NAMESPACE: ${K8S_NAMESPACE}"
+
+template:
+	helm template ./python-restapi
+
+uninstall:
+	helm -n ${K8S_NAMESPACE} uninstall python-restapi-${GITREF}
+
+install:
+	helm -n ${K8S_NAMESPACE} install python-restapi-${GITREF} ./python-restapi \
+		--set image.tag=${GITREF}
+
+reinstall: uninstall install
