--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -1,39 +1,101 @@
-name: Build and Deploy Docker Image
+name: Dev build and deploy
 on:
   push:
     branches:
       - master
+      - add-dev-build-deploy
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
+concurrency: ci-${{ github.ref }}
 jobs:
-  setref:
+  set-refs:
+    name: Set references
     runs-on: ubuntu-latest
     steps:
       - id: set-refs
         name: Set refs
-        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/}) }}" >> $GITHUB_OUTPUT
+        run: |
+          if [[ ${GITHUB_REF} =~ ^refs/pull ]]; then
+            echo "branch=$(echo ${{ github.event.pull_request.head.ref }})" >> $GITHUB_OUTPUT
+          else
+            echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+          fi
       - name: Check refs
         run: |
-          echo "the triggering github branch is: ${{ steps.set-refs.outputs.BRANCH_NAME }}"
-
-#  build_and_deploy:
-#    environment: dev
-#    name: Build and Deploy
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v2
-#      - name: Login to GitHub Container Registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ghcr.io
-#          username: vector623
-#          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
-#      - name: Build and push
-#        uses: docker/build-push-action@v3
-#        with:
-#          context: ./
-#          tags: ghcr.io/ptcdevs/python-restapi:latest
-#          push: true
+          echo "branch: ${{ steps.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
+    outputs:
+      branch: ${{ steps.set-refs.outputs.branch }}
+  docker-build:
+    environment: dev
+    name: Build and push docker image
+    runs-on: ubuntu-latest
+    needs:
+      - set-refs
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check refs
+        run: |
+          echo "branch: ${{ needs.set-refs.outputs.branch }}"
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ${{ runner.OS }}/docker
+          key: ${{ runner.OS }}-docker-${{ hashFiles('**/Dockerfile') }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.OS }}-docker-
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: vector623
+          password: ${{ secrets.GHCR_GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: ./
+          tags: ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}
+          push: true
+      - id: set-docker-tag
+        name: Output image tag
+        run: |
+          echo "docker-tag=$(echo ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }})" >> $GITHUB_OUTPUT
+          echo "docker tag: ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
+    outputs:
+      branch: ${{ steps.set-docker-tag.docker-tag }}
+  helm-deploy:
+    environment: dev
+    name: Helm deploy to dev
+    runs-on: ubuntu-latest
+    needs:
+      - set-refs
+      - docker-build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Check refs
+        run: |
+          echo "branch: ${{ needs.set-refs.outputs.branch }}"
+          echo "docker-tag: ${{ needs.docker-build.outputs.docker-tag }}"
+      - uses: azure/k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+          context: lke77314-ctx
+      - name: Helm uninstall
+        run: helm -n dev uninstall python-restapi-${TAG}
+        env:
+          TAG: ${{ needs.set-refs.outputs.branch }}
+        continue-on-error: true
+      - name: Helm install
+        run: |
+          helm -n dev install python-restapi-${TAG} ./python-restapi \
+            --set image.tag=${TAG} \
+            --wait >> $GITHUB_STEP_SUMMARY
+        working-directory: helm
+        env:
+          TAG: ${{ needs.set-refs.outputs.branch }}
