Update dev build deploy

--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           path: |
             ${{ runner.OS }}/docker
-          key: ${{ runner.OS }}-docker-${{ hashFiles('**/Dockerfile') }}-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.OS }}-docker-${{ hashFiles('**/Dockerfile') }}-python-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.OS }}-docker-
       - name: Set up QEMU
