--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -67,7 +67,7 @@ jobs:
           echo "docker-tag=$(echo ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }})" >> $GITHUB_OUTPUT
           echo "docker tag: ghcr.io/ptcdevs/python-restapi:${{ needs.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
     outputs:
-      branch: ${{ steps.set-docker-tag.docker-tag }}
+      branch: ${{ steps.set-docker-tag.outputs.docker-tag }}
   helm-deploy:
     environment: dev
     name: Helm deploy to dev
@@ -91,11 +91,16 @@ jobs:
         env:
           TAG: ${{ needs.set-refs.outputs.branch }}
         continue-on-error: true
-      - name: Helm install
+      - id: helm-install
+        name: Helm install
         run: |
           helm -n dev install python-restapi-${TAG} ./python-restapi \
             --set image.tag=${TAG} \
-            --wait >> $GITHUB_STEP_SUMMARY
+            --wait >> $HELM_INSTALL_RESULT
+          echo $HELM_INSTALL_RESULT >> $GITHUB_STEP_SUMMARY
+          echo "helm-output=${GITHUB_OUTPUT}" >> $GITHUB_OUTPUT
         working-directory: helm
         env:
           TAG: ${{ needs.set-refs.outputs.branch }}
+    outputs:
+      branch: ${{ steps.helm-install.outputs.helm-output }}
