--- a/helm/python-restapi/templates/deployment.yaml
+++ b/helm/python-restapi/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 3
             httpGet:
-              path: /
+              path: /health
               port: http
           readinessProbe:
             initialDelaySeconds: 20
@@ -49,7 +49,7 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 3
             httpGet:
-              path: /
+              path: /health
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
