--- a/helm/python-restapi/values.yaml
+++ b/helm/python-restapi/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: ghcr.io/ptcdevs/python-restapi
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: latest
 imagePullSecrets:
