Update dev build deploy

--- a/.github/workflows/dev-build-deploy.yaml
+++ b/.github/workflows/dev-build-deploy.yaml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
   workflow_dispatch:
-concurrency: ci-${{ github.ref }}
+concurrency: ${GITHUB_REF}
 jobs:
   set-refs:
     name: Set references
