--- a/helm/python-restapi/templates/deployment.yaml
+++ b/helm/python-restapi/templates/deployment.yaml
@@ -41,16 +41,15 @@ spec:
             timeoutSeconds: 5
             failureThreshold: 3
             httpGet:
-              path: /
-              port: http
+              path: /health
+              port: {{ .Values.deployment.containerPort }}
           readinessProbe:
-            initialDelaySeconds: 20
-            periodSeconds: 60
+            periodSeconds: 5
             timeoutSeconds: 5
-            failureThreshold: 3
+            failureThreshold: 10
             httpGet:
-              path: /
-              port: http
+              path: /health
+              port: {{ .Values.deployment.containerPort }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
