--- a/.github/workflows/dev-undeploy.yaml
+++ b/.github/workflows/dev-undeploy.yaml
@@ -11,7 +11,11 @@ jobs:
       - id: set-refs
         name: Set refs
         run: |
-          echo "branch=$(echo ${{ github.event.ref }})" >> $GITHUB_OUTPUT
+          if [[ ${{ github.event.ref }} =~ ^refs/pull ]]; then
+            echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+          else
+            echo "branch=$(echo ${{ github.event.ref }})" >> $GITHUB_OUTPUT
+          fi
       - name: Check refs
         run: |
           echo "branch: ${{ steps.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
