--- a/.github/workflows/dev-undeploy.yaml
+++ b/.github/workflows/dev-undeploy.yaml
@@ -2,7 +2,9 @@ name: Dev undeploy
 on:
   delete:
   workflow_dispatch:
-concurrency: ci-${{ github.ref }}
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   set-refs:
     name: Set references
@@ -11,7 +13,11 @@ jobs:
       - id: set-refs
         name: Set refs
         run: |
-          echo "branch=$(echo ${{ github.event.ref }})" >> $GITHUB_OUTPUT
+          if [[ ${{ github.event.ref }} =~ ^refs/heads ]]; then
+            echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
+          else
+            echo "branch=$(echo ${{ github.event.ref }})" >> $GITHUB_OUTPUT
+          fi
       - name: Check refs
         run: |
           echo "branch: ${{ steps.set-refs.outputs.branch }}" >> $GITHUB_STEP_SUMMARY
