Update decrypt invocation

--- a/config/Makefile
+++ b/config/Makefile
@@ -16,5 +16,5 @@ encrypt:
 	ls *secret.yaml | sed -e 's/.yaml//g' | xargs -I{} sops --encrypt --output {}.sops.yaml {}.yaml
 
 decrypt:
-	ls *secret.sops.env | sed -e 's/.sops.env//g' | xargs -I{} spos --encrypt --output {}.env {}.sops.env
-	ls *secret.sops.yaml | sed -e 's/.sops.yaml//g' | xargs -I{} spos --encrypt --output {}.yaml {}.sops.yaml
+	ls *secret.sops.env | sed -e 's/.sops.env//g' | xargs -I{} sops --decrypt --output {}.env {}.sops.env
+	ls *secret.sops.yaml | sed -e 's/.sops.yaml//g' | xargs -I{} sops --decrypt --output {}.yaml {}.sops.yaml
